--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>App</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html class="govuk-template govuk-template--rebranded" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>App</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body class="govuk-template__body">
+    <app-root></app-root>
+    <script>
+      document.body.classList.add('js-enabled', 'govuk-frontend-supported');
+    </script>
+  </body>
 </html>
